# Fantasy-Draft-Analysis-Tool

./: .env.example  .gitignore  DEPLOY_NAS.md  README.MD  README.md  capture_login_session.py  capture_network.py  docker-compose.prod.yml  docker-compose.yml  fantacalcio_tamarros_client.py  manage.py  report_analisi_avanzata.md  requirements.txt
ai_analyst/fanta_crew/: README.md  crew.py  main.py  pyproject.toml
ai_analyst/fanta_crew/config/: agents.yaml  tasks.yaml
api/: permissions.py  serializers.py  tests.py  urls.py  views.py
backend/: .dockerignore  .env.example  Dockerfile  capture_login_session.py  requirements.txt
backend/app/: config.py  database.py  main.py
backend/etl/: import_history.py
competizioni/: admin.py  models.py  tests.py
competizioni/migrations/: 0001_initial.py
core/: admin.py  models.py
core/migrations/: 0001_initial.py  0002_importtask.py  (+1 more)
doc/: architettura_fantacalcio.md
fanta_project/: asgi.py  settings.py  urls.py  wsgi.py
fantacalcio/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
frontend/: Dockerfile  angular.json  nginx.conf  package-lock.json  package.json
frontend/src/: styles.css
infortuni/: admin.py  apps.py  models.py  tests.py
integrations/: serie_a.py  tests.py
mercato/: admin.py  models.py  tests.py
players/: admin.py  models.py
services/: classifiche.py  infortuni.py  scambi.py  scoring.py
stats/: admin.py  models.py  urls.py  urls_analisi.py  views.py  views_analisi.py
strategy/: admin.py  models.py
templates/: base.html  home.html
users/: admin.py  models.py
(+89 files in other folders)
