[project]
name = "fanta_crew"
version = "0.1.0"
description = "fanta_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.5a2"
]

[project.scripts]
fanta_crew = "fanta_crew.main:run"
run_crew = "fanta_crew.main:run"
train = "fanta_crew.main:train"
replay = "fanta_crew.main:replay"
test = "fanta_crew.main:test"
run_with_trigger = "fanta_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
